syntax = "proto3";

package user.v1;

option go_package = "github.com/steve-mir/go-auth-system/internal/api/grpc/user;user";

// import "google/protobuf/timestamp.proto";
import "auth.proto";

// UserService manages user profiles and data
service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc VerifyPhone(VerifyPhoneRequest) returns (VerifyPhoneResponse);
}

// Get profile request message
message GetProfileRequest {
  string user_id = 1;
}

// Get profile response message
message GetProfileResponse {
  auth.v1.UserProfile user_profile = 1;
}

// Update profile request message
message UpdateProfileRequest {
  string user_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone = 4;
  optional string username = 5;
}

// Update profile response message
message UpdateProfileResponse {
  auth.v1.UserProfile user_profile = 1;
  string message = 2;
}

// Delete user request message
message DeleteUserRequest {
  string user_id = 1;
  string reason = 2;
}

// Delete user response message
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// List users request message
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string sort_by = 4;
  string sort_order = 5;
  repeated string roles = 6;
  bool include_locked = 7;
}

// List users response message
message ListUsersResponse {
  repeated auth.v1.UserProfile users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

// Change password request message
message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

// Change password response message
message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

// Verify email request message
message VerifyEmailRequest {
  string user_id = 1;
  string verification_code = 2;
}

// Verify email response message
message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
}

// Verify phone request message
message VerifyPhoneRequest {
  string user_id = 1;
  string verification_code = 2;
}

// Verify phone response message
message VerifyPhoneResponse {
  bool success = 1;
  string message = 2;
}